feat: support content type filters and optional TV seasons
